SILGen: Fix incorrect assertion

Since 'decl' was already a StructDecl, 'decl->getDeclContext()' was
giving us a non-generic module scope context.

Fixes <https://bugs.swift.org/browse/SR-10075>.